# arbitrage-engine

./: .env  .env.example  .gitignore  pyproject.toml
research/: factor_model_spec.md
scripts/: cross_venue_dashboard.py  dashboard.py  debug_dom.py  debug_price.py  debug_selectors.py  dex_spread_dashboard.py  factor_dashboard.py  factor_dashboard_v2.py  flowchart.html  full_dex_ranker.py  hotstuff_dashboard.py  hotstuff_divergence.py  hotstuff_multi_venue.py  hotstuff_scan.py  run.py  scan.py  stat_arb_ranker.py  stat_arb_ranker_v2.py  test_browser.py  test_js.py
src/: pipeline.py
src/arbitrage_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: settings.py
src/listers/: ebay_publisher.py
src/models/: database.py
src/processors/: capital_optimizer.py  divergence_engine.py  enricher.py  factor_model.py  factor_model_v2.py  filter_rank.py  funding_analyzer.py  historical_div.py  hotstuff_arb.py  hotstuff_fees.py  image_restyler.py  images.py  market_data.py  market_tracker.py  multi_venue.py  platform_advisor.py  pricing.py  product_id.py  reference_prices.py  scorer.py
src/scrapers/: base.py  cf_bypass.py  crawl4ai_engine.py  ebay_finding.py  hotstuff.py  mercari_browser.py  mercari_jp.py  scrapfly_client.py
src/sync/: inventory_sync.py
src/utils/: alerts.py
tests/: test_scorer.py
