[project]
name = "arbitrage-engine"
version = "0.1.0"
description = "Multi-source marketplace arbitrage automation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "pillow>=10.4.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "tenacity>=8.4.0",
    "fake-useragent>=1.5.0",
    "crawl4ai>=0.8.0",
    "camoufox>=0.4.0",
    "browser-use>=0.1.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "tenacity>=8.4.0",
    "fake-useragent>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
